# ocra

./: .gitignore  MANIFEST.in  README.md  example.py  orientation_example.py  pyproject.toml  requirements.txt  simple_example.py
src/ocra/: __init__.py
src/ocra/ishandwritten/: __init__.py  config.json  dataset.py  export_onnx.py  handwritten_model.onnx  model.py  predictor.py  train.py  utils.py
src/ocra/orientation/: __init__.py  config.json  dataset.py  export_onnx.py  model.py  orientation_model.onnx  predictor.py  train.py  utils.py
src/orientation/: __init__.py  config.json  dataset.py  generate_rotations_csv.py  model.py  train.py  utils.py
