[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocra"
version = "0.1.5"
description = "ocra"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["computer-vision", "image-processing", "orientation", "rotation", "onnx", "pytorch"]
authors = [
    { name = "sherstpasha" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

# Core dependencies for inference
dependencies = [
  "numpy>=1.21,<3",
  "Pillow>=8.0.0",
  "tqdm>=4.65",
  "timm>=0.9.16"
]

# Optional dependencies
[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16.0"
]
cpu = [
    "onnxruntime>=1.16.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocra*"]

[tool.setuptools.package-data]
"ocra.orientation" = ["best_acc_weights.pth", "config.json", "orientation_model.onnx"]

[project.urls]
Homepage = "https://github.com/sherstpasha/Ocra"
Repository = "https://github.com/sherstpasha/Ocra"
Issues = "https://github.com/sherstpasha/Ocra/issues"